fix: Placeholder not showing up

--- a/apps/client/src/app/globals.css
+++ b/apps/client/src/app/globals.css
@@ -85,6 +85,14 @@
   outline: none;
 }
 
+.tiptap p.is-editor-empty:first-child::before {
+  color: #adb5bd;
+  content: attr(data-placeholder);
+  float: left;
+  height: 0;
+  pointer-events: none;
+}
+
 /* Message */
 .chat:not([data-type='user']) :is(.message > *) {
   margin: 10px 0;
